1.0.8
--------------------------------

- fix rsyncing of symlinks, thanks to Charles Solar 
  (should also resolve http://bitbucket.org/hpk42/py-trunk/issue/70/)
- update usage of apipkg to 1.0b6
- removed all trailing whitespace from source files

1.0.7
--------------------------------

- try to avoid a random KeyboardInterrupt Error when threads
  are ending. 

- extend xspec syntax to allow for one or multiple "env:NAME=value" 
  environment variable settings which will be set on the remote side. 
  (thanks Jakub Gustak)

1.0.6
--------------------------------

- fix jython/windows interactions 
- fix waitclose/callback-with-endmarker race condition
- fix race condition where multiple threads sending data over channels
  would crash the serializer and process 

1.0.5
--------------------------------

- more care during receiver-thread finalization during interp-shutdown,
  should get rid of annoying and meaningless exceptions
- fix glitch in ssh-fileserver example 
- experimentally add "setup.py test" support - will run py.test 

1.0.4
--------------------------------

- try to deal more cleanly with interpreter shutdown setting globals to
  None. this avoids (hopefully) some bogus tracebacks at process exit. 

1.0.3
--------------------------------

- refine termination some more: CTRL-C and gateway.exit will 
  now try harder to interrupt remote execution.  this 
  helps to avoid left-over ssh-processes.
- fix read-on-non-blocking-files issue probably related to jython only:  
  the low-level read on subprocess pipes may be non-blocking, returning 
  less bytes than requested - so we now loop.
- Windows/python2.4: fix bug that killing subprocesses would fail
- make RemoteError and TimeoutError available directly on execnet namespace

- fix some doc and test issues (thanks thm and ronny), add ssh_fileserver example
- update internal copy of apipkg
- always skip remote tests if no ssh specs given

1.0.2 
--------------------------------
